--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "next": "13.0.6",
+    "next-auth": "^4.17.0",
+    "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@prisma/client": "^4.7.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "prisma": "^4.7.0",
+    "tailwindcss": "^3.2.4"
   }
 }
