--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@stripe/react-stripe-js": "^1.15.0",
+    "@stripe/stripe-js": "^1.45.0",
     "next": "13.0.6",
     "next-auth": "^4.17.0",
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.1.0"
   },
   "devDependencies": {
     "@prisma/client": "^4.7.0",
